// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner should render close button 1`] = `
<aside
  aria-label="Banner"
  className="mock-classname banner"
  data-testid="banner"
>
  <div
    className="bannerContent imagePositionLeft closeButtonSpacing"
  >
    <div
      data-onclick="onclick-provided"
      data-testid="cancel-button"
    />
    <h2
      className="bannerTitle"
    >
      mock title
    </h2>
    <h3
      className="bannerSubtitle"
    >
      mock Subtitle
    </h3>
    <img
      alt="mock image alt"
      className="bannerImage"
      src="mockImage.src"
    />
  </div>
</aside>
`;

exports[`Banner should render correctly without props 1`] = `
<aside
  aria-label="Banner"
  className="banner"
  data-testid="banner"
>
  <div
    className="bannerContent imagePositionLeft"
  />
</aside>
`;

exports[`Banner should render in Right to Left mode 1`] = `
<aside
  aria-label="Banner"
  className="mock-classname banner rtl"
  data-testid="banner"
>
  <div
    className="bannerContent imagePositionLeft closeButtonSpacing"
  >
    <div
      data-onclick="onclick-provided"
      data-testid="cancel-button"
    />
    <h2
      className="bannerTitle"
    >
      mock title
    </h2>
    <h3
      className="bannerSubtitle"
    >
      mock Subtitle
    </h3>
    <img
      alt="mock image alt"
      className="bannerImage mock-image-classname"
      src="mockImage.src"
    />
  </div>
</aside>
`;

exports[`Banner should render title, subtitle and image 1`] = `
<aside
  aria-label="Banner"
  className="mock-classname banner"
  data-testid="banner"
>
  <div
    className="bannerContent imagePositionLeft"
  >
    <h2
      className="bannerTitle"
    >
      mock title
    </h2>
    <h3
      className="bannerSubtitle"
    >
      mock Subtitle
    </h3>
    <img
      alt="mock image alt"
      className="bannerImage mock-image-classname"
      src="mockImage.src"
    />
  </div>
</aside>
`;

exports[`Banner should render with correct image position class - bottom 1`] = `
<aside
  aria-label="Banner"
  className="banner"
  data-testid="banner"
>
  <div
    className="bannerContent imagePositionBottom"
  />
</aside>
`;

exports[`Banner should render with correct image position class - left 1`] = `
<aside
  aria-label="Banner"
  className="banner"
  data-testid="banner"
>
  <div
    className="bannerContent imagePositionLeft"
  />
</aside>
`;

exports[`Banner should render with correct image position class - right 1`] = `
<aside
  aria-label="Banner"
  className="banner"
  data-testid="banner"
>
  <div
    className="bannerContent imagePositionRight"
  />
</aside>
`;

exports[`Banner should render with correct image position class - top 1`] = `
<aside
  aria-label="Banner"
  className="banner"
  data-testid="banner"
>
  <div
    className="bannerContent imagePositionTop"
  />
</aside>
`;

exports[`Banner should use custom render function for subtitle 1`] = `
<aside
  aria-label="Banner"
  className="banner"
  data-testid="banner"
>
  <div
    className="bannerContent imagePositionLeft"
  >
    <h2
      className="bannerTitle"
    >
      mock title
    </h2>
    <h3
      className="bannerSubtitle"
    >
      <div
        data-testid="custom_render"
      >
        mock Subtitle
      </div>
    </h3>
  </div>
</aside>
`;

exports[`Banner should use custom render function for title 1`] = `
<aside
  aria-label="Banner"
  className="banner"
  data-testid="banner"
>
  <div
    className="bannerContent imagePositionLeft"
  >
    <h2
      className="bannerTitle"
    >
      <div
        data-testid="custom_render"
      >
        mock title
      </div>
    </h2>
    <h3
      className="bannerSubtitle"
    >
      mock Subtitle
    </h3>
  </div>
</aside>
`;
